--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,22 +13,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install dependencies
+      - name: Install claat
         run: |
-          sudo apt-get update
-          sudo apt-get install -y npm
-          npm install -g @google/claat
+          wget https://github.com/googlecodelabs/tools/releases/download/v2.2.1/claat-linux-amd64
+          chmod +x claat-linux-amd64
+          sudo mv claat-linux-amd64 /usr/local/bin/claat
+
+      - name: Verify claat installation
+        run: claat --version
 
       - name: Build codelabs
         run: |
           mkdir -p dist
-          claat export codelabs/first-codelab.md
-          mv my-first-codelab dist/
+          claat export codelabs/first-codelab.md --output dist/
+          ls dist # Check output
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-
-
