cargo culting the output

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build codelabs
         run: |
           mkdir -p dist
-          claat export codelabs/first-codelab.md --output dist/
+          claat export codelabs/first-codelab.md -o dist
           ls dist # Check output
 
       - name: Deploy to GitHub Pages
