--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write # So we can commit the exported pages
+
 jobs:
   build:
     runs-on: ubuntu-latest
