Is a top-level index too much to ask for?

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
           mkdir -p dist
           ls -al dist
           ls -al codelabs
-          claat export -o dist codelabs/first-codelab.md
+          claat export -o dist codelabs/*.md
           echo pwd
           ls -al
           echo dist
